<resources>

    <!-- Permission library overrides -->
    <string name="message_permission_required">Aplikacja wymaga uprawnień do pewnych funkcji aby działać poprawnie</string>
    <string name="title_permission_required">Uprawnienia wymagane</string>
    <string name="notification_channel_name">Uprawnienia</string>

    <string name="location_type_info">Info</string>
    <string name="location_type_quarantine">Kwarantanna</string>

    <string name="emergency_level_green">Zielona</string>
    <string name="emergency_level_yellow">Żółta</string>
    <string name="emergency_level_red">Czerwona</string>

    <string name="role_user">Użytkownik</string>
    <string name="role_mod">Moderator</string>
    <string name="role_admin">Administrator</string>

    <string name="suspicion_level_sick">Definitywnie chory</string>
    <string name="suspicion_level_probable">Prawdopodobnie chory</string>
    <string name="suspicion_level_dismissed">Zła diagnoza</string>

    <string name="app_name">Ostrzeżenie Epidemiczne</string>
    <string name="app_error">Błąd</string>
    <string name="register">Zarejestruj</string>
    <string name="remember_me">Zapamiętaj mnie</string>
    <string name="forget_credentials">Zapomnij dane logowania</string>
    <string name="login">Zaloguj</string>
    <string name="username">Nazwa użytkownika:</string>
    <string name="password">Hasło:</string>
    <string name="repeat_password">Powtórz hasło:</string>
    <string name="email">Email:</string>
    <string name="location_history_gathering_service">Usługa historii lokalizacji</string>

    <string name="HERE_YOU_ARE">Tutaj jesteś</string>
    <string name="registration_successful">Rejestracja udała się!</string>
    <string name="too_short_login">Nazwa użytkownika musi mieć co najmniej 5 znaki</string>
    <string name="too_short_password">Hasło musi mieć co najmniej 5 znaków</string>
    <string name="password_must_match">Hasła muszą się zgadzać</string>
    <string name="select_date">Wybierz datę</string>
    <string name="serial_permission_warning">Aplikacja wymaga dodatkowych uprawnień w celu uzyskania numeru seryjnego urządzenia dla poprawnego działania systemu powiadomień push</string>
    <string name="permission_not_granted">Nie uzyskano wymaganych uprawnień</string>
    <string name="app_requires_gps">Aplikacja potrzebuje dostępu do systemu GPS w celu zbierania historii lokalizacji</string>
    <string name="device_could_not_be_registered">Nie udało się zarejestrować urządzenia</string>
    <string name="turn_off_location_service">Wyłącz usługę gromadzenia aktualizacji</string>
    <string name="logout">Wyloguj</string>
    <string name="add_location">Dodaj lokalizację</string>
    <string name="remove_location">Usuń lokalizację</string>
    <string name="description">Opis</string>
    <string name="submit">Zatwierdź</string>
    <string name="cancel">Anuluj</string>
    <string name="should_expire">Wygasająca lokalizacja</string>
    <string name="expiry_date_not_selected">Data wygaśnięcia nie została wybrana</string>
    <string name="description_not_set">Opis nie został ustawiony</string>
    <string name="location_not_selected">Nie wybrano lokalizacji</string>
    <string name="location_added">Lokalizacja dodana</string>
    <string name="location_to_delete_not_selected">Nie wybrano lokalizacji do usunięcia</string>
    <string name="location_delete_success">Lokalizacja usunięta pomyślnie</string>
    <string name="selected_position">Wybrana pozycja</string>
    <string name="safety_zone">Strefa bezpieczeństwa:</string>
    <string name="role">Rola:</string>
    <string name="search">Wyszukaj:</string>
    <string name="role_change">Zmień role</string>
    <string name="suspect_mark_user">Oznacz użytkownika</string>
    <string name="suspicion_level">Poziom podejżliwości</string>
    <string name="set_date_of_infection">Ustawiona data zachorowania:</string>
    <string name="select_date_of_infection">Wybierz datę zachorowania</string>
    <string name="select_pathogen">Wybierz patogen:</string>
    <string name="mark_user">Oznacz użytkownika</string>
    <string name="mark_user_success">Poprawnie oznaczono użytkownika:</string>
    <string name="mark_suspect_are_you_sure">Czy jesteś pewien że chcesz oznaczyć użytkownika:</string>
    <string name="mark_suspect_as_carrier">jako nosiciela:</string>
    <string name="mark_suspect_from_date">od daty:</string>
    <string name="mark_suspect_with_certainty">z pewnością:</string>

    <string name="notifications">Powiadomienia</string>
    <string name="statistics">Statystyki</string>
    <string name="zones">Strefy bezpieczeństwa</string>
    <string name="location_history">Historia lokalizacji</string>
    <string name="points_of_interest">Punkty zainteresowania</string>
    <string name="expiry_date">Czas wygaśnięcia</string>
    <string name="display_suspicion_level">Poziom podejrzliwości nosiciela:</string>
    <string name="display_pathogen_name">Nazwa patogenu:</string>
    <string name="display_alert_creation_date">Data utworzenia:</string>
    <string name="display_suspect_id">Nr podejrzanego:</string>
    <string name="display_alert_id">Nr powiadomienia:</string>

    <string name="suspect_contact_title">Ostrzeżenie</string>
    <string name="suspect_contact_text">Miałeś kontakt z podejrzanym</string>
</resources>