<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.github.margawron.epidemicalertapp.databinds.viewmodels.dialogs.AddLocationViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_location_input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="yes"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:text="@={vm.description}" />

            <CheckBox
                android:id="@+id/add_location_should_expire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_location_input_description"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:checked="@={vm.shouldExpire}"
                android:text="@string/should_expire" />
            <TextView
                android:id="@+id/add_location_expiry_date"
                android:layout_below="@id/add_location_should_expire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/expiry_date">
            </TextView>
            <DatePicker
                android:id="@+id/add_location_input_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_location_expiry_date"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:datePickerMode="calendar"
                android:day="@={vm.day}"
                android:hint="@string/should_expire"
                android:month="@={vm.month}"
                android:spinnersShown="true"
                android:year="@={vm.year}" />

            <Spinner
                android:id="@+id/add_location_spinner_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_location_input_time"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:entries="@{vm.items}"
                android:selectedItemPosition="@={vm.locationTypeOrdinal}" />

            <Button
                android:id="@+id/add_location_button_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_location_spinner_type"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:onClick="@{() -> vm.onAccept()}"
                android:text="@string/submit" />

            <Button
                android:id="@+id/add_location_button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_location_button_accept"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:onClick="@{() -> vm.onCancel()}"
                android:text="@string/cancel" />

        </RelativeLayout>
    </ScrollView>

</layout>